trunk/Archive2/ab/d85aafa5a68130/output
main.cpp: In function 'int main()':
main.cpp:11:6: error: cannot convert 'main()::__lambda0' to 'void (*)(int)' in assignment
  t.f = [k](int a) {};
      ^
