trunk/Archive2/ab/d85aafa5a68130/main.cpp
class T
{
public:    
	void (*f)(int);
};

int main()
{
    int k = 1;
	T t;
	t.f = [k](int a) {};
}

